# dishka-faststream

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: new-event.yml  release_pypi.yaml  test.yaml
examples/: faststream_app.py
requirements/: faststream-050.txt  faststream-0529.txt  faststream-060.txt  faststream-latest.txt
src/dishka_faststream/: __init__.py  faststream_05.py  faststream_06.py
tests/: common.py  conftest.py  test_faststream_05.py  test_faststream_06.py
