[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dishka_faststream/_version.py"

[project]
name = "dishka-faststream"
dynamic = ["version"]
description = "Integration package for Dishka DI and FastStream framework"
readme = "README.md"

authors = [
    { name = "Nikita Pastukhov", email = "nikita@pastukhov-dev.com" },
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "dishka>=1.7,<2",
    "faststream>=0.5,<0.7",
]

[project.urls]
Source = "https://github.com/faststream-community/dishka-faststream"
Homepage = "https://github.com/faststream-community/dishka-faststream"
Tracker = "https://github.com/faststream-community/dishka-faststream/issues"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]
test = [
    "nox>=2025.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
files = ["src"]
strict = true
python_version = "3.10"
strict_bytes = true
local_partial_types = true
ignore_missing_imports = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false
